Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
----------------------------------------------------------------------

 ** The functions issymmetric and ishermitian accept an option "nonskew"
    or "skew" to calculate the symmetric or skew-symmetric property
    of a matrix.  Performance has also been increased.

 ** The issorted function now uses a direction option of "ascend" or
    "descend" to make it compatible with both the sort function and
    with Matlab.  Change all uses of "ascending" and "descending" in
    existing code to the new options.

 ** The strncmp and strncmpi functions now return true if the two input
    strings match, even though the number of characters specified by N
    exceeds the string length.  This behavior more closely matches
    common sense and is Matlab compatible.  Example:

      Octave 5.0 : strncmp ("abc", "abc", 100) => true
      Previously : strncmp ("abc", "abc", 100) => false

 ** The fsolve function has been tweaked to use larger step sizes when
    calculating the Jacobian of a function with finite differences.
    This leads to faster convergence.  The default solver options have
    also changed to be Matlab compatible.  This *may* result in existing
    code producing different results.

          Option     |  New Default   |  Old Default
      ------------------------------------------------
        FinDiffType  |   "forward"    |   "central"
        MaxFunEvals  | 100*length(x0) |     Inf
        TolFun       |     1e-6       |     1e-7
        TolX         |     1e-6       |     1e-7
        Updating     |     "off"      |     "on"

 ** The fminsearch function has changed default solver options for
    Matlab compatibility.  The accuracy option TolFun is now 1e-4 rather
    than 1e-7.  This *may* result in existing code producing different
    results.

 ** The fminbnd function has changed defaults for Matlab compatibility.